Add config file based configuration